@@ -38,7 +38,7 @@ public class EntityMinecartFurnace extends EntityMinecart
     protected void entityInit()
     {
         super.entityInit();
-        this.dataWatcher.addObject(16, new Byte((byte)0));
+        this.dataWatcher.addObject(16, Byte.valueOf((byte) 0));
     }
 
     /**
@@ -91,7 +91,7 @@ public class EntityMinecartFurnace extends EntityMinecart
 
         if (d0 > 1.0E-4D && this.motionX * this.motionX + this.motionZ * this.motionZ > 0.001D)
         {
-            d0 = (double)MathHelper.sqrt_double(d0);
+            d0 = MathHelper.sqrt_double(d0);
             this.pushX /= d0;
             this.pushZ /= d0;
 
@@ -115,21 +115,21 @@ public class EntityMinecartFurnace extends EntityMinecart
 
         if (d0 > 1.0E-4D)
         {
-            d0 = (double)MathHelper.sqrt_double(d0);
+            d0 = MathHelper.sqrt_double(d0);
             this.pushX /= d0;
             this.pushZ /= d0;
             double d1 = 1.0D;
-            this.motionX *= (double)0.8F;
+            this.motionX *= 0.8F;
             this.motionY *= 0.0D;
-            this.motionZ *= (double)0.8F;
+            this.motionZ *= 0.8F;
             this.motionX += this.pushX * d1;
             this.motionZ += this.pushZ * d1;
         }
         else
         {
-            this.motionX *= (double)0.98F;
+            this.motionX *= 0.98F;
             this.motionY *= 0.0D;
-            this.motionZ *= (double)0.98F;
+            this.motionZ *= 0.98F;
         }
 
         super.applyDrag();
@@ -146,7 +146,7 @@ public class EntityMinecartFurnace extends EntityMinecart
         {
             if (!playerIn.capabilities.isCreativeMode && --itemstack.stackSize == 0)
             {
-                playerIn.inventory.setInventorySlotContents(playerIn.inventory.currentItem, (ItemStack)null);
+                playerIn.inventory.setInventorySlotContents(playerIn.inventory.currentItem, null);
             }
 
             this.fuel += 3600;
